--- a/Files/rrs/mi1.Rmd
+++ b/Files/rrs/mi1.Rmd
@@ -1,10 +1,10 @@
 ---
 title: How to succeed in human modified environments
 author: 
-- '[Logan CJ](http://CorinaLogan.com)^1^'
-- '[Shaw R](https://thinkingbehaviour.org)^2^'
+- '[Logan CJ](http://CorinaLogan.com)^1,2^'
+- '[Shaw R](https://thinkingbehaviour.org)^3^'
 - '[Lukas D](https://dieterlukas.mystrikingly.com)^1^'
-- '[McCune KB](https://www.kelseymccune.com/)^1,3^'
+- '[McCune KB](https://www.kelseymccune.com/)^1,2^'
 date: '`r Sys.Date()`'
 always_allow_html: yes
 output:
@@ -37,7 +37,7 @@ header-includes:
 
 Open... ![](logoOpenAccess.png){width=5%} access ![](logoOpenCode.png){width=5%} [code](https://github.com/ManyIndividuals/ManyIndividuals/blob/main/Files/rrs/mi1.Rmd)
 
-**Affiliations:** 1) Max Planck Institute for Evolutionary Anthropology, Germany; 2) Victoria University of Wellington, New Zealand; 3) University of California Santa Barbara, USA. Corresponding authors: corina_logan@eva.mpg.de, rachael.shaw@vuw.ac.nz, kelseybmccune@gmail.com
+**Affiliations:** 1) Max Planck Institute for Evolutionary Anthropology, Germany; 2) University of California Santa Barbara, USA; 3) Victoria University of Wellington, New Zealand. Corresponding authors: corina_logan@eva.mpg.de, rachael.shaw@vuw.ac.nz, kelseybmccune@gmail.com
 
 ```{r setup, include=FALSE}
 library(knitr)
